cargo-features = ["codegen-backend"]
[package]
name = "sctw"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0"

[dependencies.confy]
version = "0.6.1"
features = ["ron_conf"]
default-features = false


[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
